Fixat med kontaktsidan

--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -8,7 +8,7 @@
     <div class="maincontainer ontop">
         <div class="row">
             <div class="col-sm-4 col-md-4 col-lg-4 divleft">
-                <h3 class="red">John Ekströms bygg AB</h3>
+                <h3 class="red">John Ekströms Bygg AB</h3>
                 <p>
                     Org nr 556212-0468
                     <br />Ormestagatan 1B
