--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -17,7 +17,7 @@
             <div class=" col-md-12">
                 <div class="falt">
                     <label>
-                        Fråga:
+                        Fråga: *
                     </label>
                     <div class="input-group">
                         <input name="state" placeholder="Fråga" class="form-control" type="text">
@@ -26,7 +26,7 @@
 
                 <div class="falt">
                     <label>
-                        Svar:
+                        Svar: *
                     </label>
                     <img src="~/Content/Images/publish-wordpress-page.jpg" class=" img-responsive"/>
                 </div>
@@ -133,7 +133,7 @@
                                          
                                                 <div class="falt">
                                                     <label>
-                                                        Fråga:
+                                                        Fråga: *
                                                     </label>
                                                     <div class="input-group">
                                                         <input name="state" placeholder="2a hands uthyrning" class="form-control" type="text">
@@ -142,7 +142,7 @@
 
                                                 <div class="falt">
                                                     <label>
-                                                        Svar:
+                                                        Svar: *
                                                     </label>
                                                     <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre" style="border:1px solid grey; width:500px;">
                                                     <button type="submit" class="btn btn-success" style="margin: 10px 10px 10px 0">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
