--- a/design/design/Views/Admin/Val.cshtml
+++ b/design/design/Views/Admin/Val.cshtml
@@ -36,7 +36,7 @@
                 <h1 style="text-align:center;">Nytt övrigt val</h1>
 
                 <div class="">
-                    <label>Namn:</label>
+                    <label>Namn: *</label>
                     <div class=" input-group">
                         <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
                     </div>
@@ -52,7 +52,7 @@
 
             <div class=" col-md-6 col-lg-6" style="background-color: #dcdcdc; border-right: 20px solid white; border-left:20px solid white; padding-bottom:100px;">
                 <h1 style="text-align:center;">Redigera övriga val</h1>
-                <label>Övriga val</label>
+                <label>Övriga val: *</label>
                 <div>
 
                     <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="">
-                    <label>Namn:</label>
+                    <label>Namn: *</label>
                     <div class=" input-group">
                         <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
                     </div>
@@ -83,7 +83,7 @@
 
             <div class=" col-md-4 col-lg-3" style="background-color: #dcdcdc; padding-bottom:10px;">
                 <h1 style="text-align:center;">Hantera</h1>
-                <label>Övriga val</label>
+                <label>Övriga val: *</label>
                 <div>
 
                     <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
