--- a/design/design/Views/Admin/Omrade.cshtml
+++ b/design/design/Views/Admin/Omrade.cshtml
@@ -41,18 +41,18 @@
                 <h1 style="text-align:center;">Nytt område</h1>
 
                 <div class="">
-                    <label>Område:</label>
+                    <label>Område: *</label>
                     <div class=" input-group">
                         <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
                     </div>
                 </div>
                 <div class="falt">
-                    <label>Beskrivning:</label>
+                    <label>Beskrivning: *</label>
                     <div class="input-group">
                         <textarea class="form-control" name="comment" placeholder="Beskriv området" style="height:100px; width:205px;"></textarea>
                     </div>
                 </div>
-                <label>Stad området hör till</label>
+                <label>Stad området hör till: *</label>
                 <br />
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
@@ -77,7 +77,7 @@
 
             <div class=" col-md-6 col-lg-6" style=" border-right: 20px solid white; border-left:20px solid white; padding-bottom:10px;" >
                 <h1 style="text-align:center;">Redigera område</h1>
-                <label>Alla områden</label>
+                <label>Alla områden: *</label>
                 <div>
 
                     <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
@@ -89,20 +89,20 @@
                 </div>
 
                 <div class="">
-                    <label>Område:</label>
+                    <label>Område: *</label>
                     <div class=" input-group">
                         <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
                     </div>
                 </div>
                 <div class="falt">
-                    <label>Beskrivning:</label>
+                    <label>Beskrivning: *</label>
                     <div class="input-group">
                         <textarea class="form-control" name="comment" placeholder="Beskriv området" style="height:100px; width:205px;"></textarea>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                        Välj stad
+                        Välj stad: *
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
@@ -125,7 +125,7 @@
 
             <div class=" col-md-4 col-lg-3" style="padding-bottom:10px;">
                 <h1 style="text-align:center;">Hantera</h1>
-                <label>Alla områden</label>
+                <label>Alla områden: *</label>
                 <div>
 
                     <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
