--- a/design/design/Views/Admin/Stad.cshtml
+++ b/design/design/Views/Admin/Stad.cshtml
@@ -40,13 +40,13 @@
                 <h1>Ny stad</h1>
 
                 <div class="">
-                    <label>Stad:</label>
+                    <label>Stad: *</label>
                     <div class=" input-group">
                         <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
                     </div>
                 </div>
                 <div class="falt">
-                    <label>Beskrivning:</label>
+                    <label>Beskrivning: *</label>
                     <div class="input-group">
                         <textarea class="form-control" name="comment" placeholder="Beskriv staden" style="height:100px; width:205px;"></textarea>
                     </div>
@@ -60,7 +60,7 @@
 
             <div class=" col-md-6" style="border-left:20px solid white; background-color:#dcdcdc; padding-bottom:10px;">
                 <h1>Redigera stad</h1>
-                <label>Städer</label>
+                <label>Städer *</label>
                 <div>
 
                     <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
@@ -72,13 +72,13 @@
                 </div>
 
                 <div class="">
-                    <label>Stad:</label>
+                    <label>Stad: *</label>
                     <div class=" input-group">
                         <input name="state" placeholder="Örebro" class="form-control" style="border-radius:0px;" type="text">
                     </div>
                 </div>
                 <div class="falt">
-                    <label>Beskrivning:</label>
+                    <label>Beskrivning: *</label>
                     <div class="input-group">
                         <textarea class="form-control" name="comment" placeholder="Örebro" style="height:100px; width:205px;"></textarea>
                     </div>
