--- a/design/design/Views/Home/NyheterAdmin.cshtml
+++ b/design/design/Views/Home/NyheterAdmin.cshtml
@@ -13,7 +13,7 @@
 
             <div class="falt">
                 <label>
-                    Datum:
+                    Datum: 
                 </label>
                 <div class="input-group">
                     <input name="state" placeholder="" class="form-control" type="date" style=" width:206px;">
@@ -21,20 +21,20 @@
             </div>
             <div class="falt">
                 <label>
-                    Rubrik:
+                    Rubrik: *
                 </label>
                 <div class="input-group">
                     <input name="state" placeholder="Rubrik" class="form-control" type="text">
                 </div>
             </div>
 
-            <label>Innehåll:</label>
+            <label>Innehåll: *</label>
             <div class="falt">
 
                 <img src="~/Content/Images/publish-wordpress-page.jpg" style="width: 600px; border: 1px solid grey;" />
             </div>
 
-            <label>Publicera:</label><br />
+            <label>Publicera: *</label><br />
             <form>
                 <input type="radio" name="val" value="Ja"> Ja
                 <input type="radio" name="val" value="Nej" checked> Nej<br />
