--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -15,7 +15,7 @@
                
                     <div class="falt">
                         <label>
-                            Område:
+                            Område: *
                         </label>
                         <div class="input-group">
                             <input name="state" placeholder="" class="form-control" type="text">
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="falt">
-                        <label>Adress:</label>
+                        <label>Adress: *</label>
                         <div class="input-group">
                             <input name="state" required placeholder="" class="form-control" type="text">
                         </div>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 <div class="col-md-10 col-xs-12" style="padding-left:0px;">
-                    <label>Typ av fastighet:</label><br />
+                    <label>Typ av fastighet: *</label><br />
                     <form>
                         <input type="radio" name="val" value="Student"> Student
                         <input type="radio" name="val" value="Senior"> Senior
@@ -88,7 +88,7 @@
              
                  
                 <div class="col-md-10 col-lg-12" style="padding-left:0px;">
-                    <label>Visa fastighetens bild på startsidan:</label><br />
+                    <label>Visa fastighetens bild på startsidan: *</label><br />
                     <form>
                         <input type="radio" name="val" value="Ja"> Ja
                         <input type="radio" name="val" value="Nej"> Nej<br />
@@ -98,7 +98,7 @@
                
                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                     <br />
-                    <label>Publicera:</label><br />
+                    <label>Publicera: *</label><br />
                     <form>
                         <input type="radio" name="val" value="Ja"> Ja
                         <input type="radio" name="val" value="Nej"> Nej<br />
@@ -231,7 +231,7 @@
                             <div class=" col-md-4 col-lg-4 ">
                                 <div class="falt">
                                     <label>
-                                        Område:
+                                        Område: *
                                     </label>
                                     <div class="input-group">
                                         <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
@@ -239,7 +239,7 @@
                                 </div>
 
                                 <div class="falt">
-                                    <label>Adress:</label>
+                                    <label>Adress: *</label>
                                     <div class="input-group">
                                         <input name="state" required placeholder="Rynningegatan 27-37" class="form-control" type="text">
                                     </div>
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av fastighet:</label><br />
+                                    <label>Typ av fastighet: *</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student"> Student
                                         <input type="radio" name="val" value="Senior"> Senior
@@ -294,7 +294,7 @@
 
                                 <div class="col-md-10 col-lg-12" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa fastighetens bild på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -303,7 +303,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Publicera:</label><br />
+                                        <label>Publicera: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja" checked> Ja
                                             <input type="radio" name="val" value="Nej"> Nej<br />
@@ -393,7 +393,7 @@
                             <div class=" col-md-4 col-lg-4 ">
                                 <div class="falt">
                                     <label>
-                                        Område:
+                                        Område: *
                                     </label>
                                     <div class="input-group">
                                         <input name="state" placeholder="Örebro Centralt" class="form-control" type="text">
@@ -401,7 +401,7 @@
                                 </div>
 
                                 <div class="falt">
-                                    <label>Adress:</label>
+                                    <label>Adress: *</label>
                                     <div class="input-group">
                                         <input name="state" required placeholder="Kyrkogatan 20" class="form-control" type="text">
                                     </div>
@@ -414,7 +414,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av fastighet:</label><br />
+                                    <label>Typ av fastighet: *</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student"> Student
                                         <input type="radio" name="val" value="Senior" checked> Senior
@@ -456,7 +456,7 @@
 
                                 <div class="col-md-10 col-lg-12" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa fastighetens bild på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -465,7 +465,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Publicera:</label><br />
+                                        <label>Publicera: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja" checked> Ja
                                             <input type="radio" name="val" value="Nej"> Nej<br />
@@ -549,7 +549,7 @@
                             <div class=" col-md-4 col-lg-4 ">
                                 <div class="falt">
                                     <label>
-                                        Område:
+                                        Område: *
                                     </label>
                                     <div class="input-group">
                                         <input name="state" placeholder="Örebro Centralt " class="form-control" type="text">
@@ -557,7 +557,7 @@
                                 </div>
 
                                 <div class="falt">
-                                    <label>Adress:</label>
+                                    <label>Adress: *</label>
                                     <div class="input-group">
                                         <input name="state" required placeholder="Slottsgatan 7" class="form-control" type="text">
                                     </div>
@@ -570,7 +570,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av fastighet:</label><br />
+                                    <label>Typ av fastighet: *</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student"> Student
                                         <input type="radio" name="val" value="Senior"> Senior
@@ -595,7 +595,7 @@
 
                                     <div class=" col-md-7 col-lg-7" style="padding-right:0px;">
                                         <div class="falt">
-                                            <label>Länk till karta:</label>
+                                            <label>Länk till karta: *</label>
                                             <div class="input-group">
                                                 <input name="state" placeholder="https://goo.gl/maps/6q7cYjMi3Qy" class="form-control" type="text">
                                             </div>
@@ -612,7 +612,7 @@
 
                                 <div class="col-md-10 col-lg-12" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa fastighetens bild på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -621,7 +621,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Publicera:</label><br />
+                                        <label>Publicera: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja" checked> Ja
                                             <input type="radio" name="val" value="Nej"> Nej<br />
