kontakt obligatoriska fält

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -25,7 +25,7 @@
                         <div class="col-md-12" style="background-color: #dcdcdc;">
                             <div class="falt">
                                 <label>
-                                    Rubrik:
+                                    Rubrik: *
                                 </label>
                                 <div class="input-group">
                                     <input name="state" placeholder="John Ekströms Bygg" class="form-control" type="text">
@@ -33,7 +33,7 @@
                             </div>
                             <div class="falt">
                                 <label>
-                                    Text:
+                                    Text: *
                                 </label>
                                 <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
                                 <button type="submit" class="btn btn-success" style="margin: 10px 10px 10px 0;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
@@ -106,7 +106,7 @@
                     <div class="col-md-12 col-lg-12">
                         <div class="falt">
                             <label>
-                                Text:
+                                Text: *
                             </label>
                             <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
                         </div>
@@ -120,7 +120,7 @@
                 </p>
 
                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
-                    <label>Avdelning:</label><br />
+                    <label>Avdelning: *</label><br />
                     <form>
                         <input type="radio" name="val" value="Ja"> Kontoret
                         <input type="radio" name="val" value="Nej"> Underhåll<br />
@@ -130,12 +130,12 @@
                     <div class="falt">
 
                         <div class="input-group">
-                            <label>Rad:</label><br />
+                            <label>Rad: *</label><br />
                             <input name="rad" placeholder="" class="form-control input-md" type="number">
                         </div>
                     </div>
                     <div class="falt">
-                        <label>Kolumn:</label>
+                        <label>Kolumn: *</label>
                         <div class="input-group">
                             
                             <input name="kolumn" placeholder="" class="form-control input-md" type="number">
