obligatoriska på student

--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -202,15 +202,15 @@
                             <div class="col-md-4 col-lg-4">
                                 <div class="falt">
                                     <label>
-                                        Område:
+                                        Område: *
                                     </label>
                                     <div class="input-group">
-                                        <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                        <input name="state" placeholder="Örebro Almby" class="form-control" type="text">
                                     </div>
                                 </div>
 
                                 <div class="falt">
-                                    <label>Adress:</label>
+                                    <label>Adress: *</label>
                                     <div class="input-group">
                                         <input name="state" required placeholder="Erik RosenbergsVäg 1" class="form-control" type="text">
                                     </div>
@@ -223,7 +223,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av fastighet:</label><br />
+                                    <label>Typ av fastighet: *</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student" checked> Student
                                         <input type="radio" name="val" value="Senior"> Senior
@@ -265,7 +265,7 @@
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa fastighetens bild på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -274,7 +274,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Publicera:</label><br />
+                                        <label>Publicera: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja" checked> Ja
                                             <input type="radio" name="val" value="Nej"> Nej<br />
@@ -354,15 +354,15 @@
                             <div class="col-md-4 col-lg-4">
                                 <div class="falt">
                                     <label>
-                                        Område:
+                                        Område: *
                                     </label>
                                     <div class="input-group">
-                                        <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                        <input name="state" placeholder="Örebro Öster" class="form-control" type="text">
                                     </div>
                                 </div>
 
                                 <div class="falt">
-                                    <label>Adress:</label>
+                                    <label>Adress: *</label>
                                     <div class="input-group">
                                         <input name="state" required placeholder="Salsmästaregatan 24-52" class="form-control" type="text">
                                     </div>
@@ -375,7 +375,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av fastighet:</label><br />
+                                    <label>Typ av fastighet: *</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student" checked> Student
                                         <input type="radio" name="val" value="Senior"> Senior
@@ -417,7 +417,7 @@
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa fastighetens bild på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -426,7 +426,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Publicera:</label><br />
+                                        <label>Publicera: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja" checked> Ja
                                             <input type="radio" name="val" value="Nej"> Nej<br />
@@ -509,15 +509,15 @@
                                 <div class="col-md-4 col-lg-4">
                                     <div class="falt">
                                         <label>
-                                            Område:
+                                            Område: *
                                         </label>
                                         <div class="input-group">
-                                            <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                            <input name="state" placeholder="Örebro Almby" class="form-control" type="text">
                                         </div>
                                     </div>
 
                                     <div class="falt">
-                                        <label>Adress:</label>
+                                        <label>Adress: *</label>
                                         <div class="input-group">
                                             <input name="state" required placeholder="Tärnvägen 12-20" class="form-control" type="text">
                                         </div>
@@ -530,7 +530,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                        <label>Typ av fastighet:</label><br />
+                                        <label>Typ av fastighet: *</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Student" checked> Student
                                             <input type="radio" name="val" value="Senior"> Senior
@@ -572,7 +572,7 @@
 
                                     <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                         <div class=" falt">
-                                            <label>Visa fastighetens bild på startsidan:</label><br />
+                                            <label>Visa fastighetens bild på startsidan: *</label><br />
                                             <form>
                                                 <input type="radio" name="val" value="Ja"> Ja
                                                 <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -581,7 +581,7 @@
                                     </div>
                                     <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                         <div class=" falt">
-                                            <label>Publicera:</label><br />
+                                            <label>Publicera: *</label><br />
                                             <form>
                                                 <input type="radio" name="val" value="Ja" checked> Ja
                                                 <input type="radio" name="val" value="Nej"> Nej<br />
