Lagt in referenser

--- a/design/design/Views/Admin/Index.cshtml
+++ b/design/design/Views/Admin/Index.cshtml
@@ -55,7 +55,10 @@
             <div class="col-md-6 col-sm-8 col-lg-6 indexcarousel">
 
                 <div class="mainbody">
+                    
                     <hr /><h2 style="text-align:center; color: black;">Våra fastigheter</h2><hr />
+                    @* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp
+                        Egna anpassningar har gjorts i den. *@
                     <div id="myCarousel1" class="carousel slide" data-interval="false">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -129,9 +132,8 @@
     </div>
 
  
-@*</div>
-</div>*@
 
+@* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp *@
 <script>
     $(document).ready(function () {
         // Activate Carousel
