--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -58,6 +58,8 @@
 
                 <div class="mainbody">
                     <hr /><h2 style="text-align:center; color: black;">Våra fastigheter</h2><hr />
+                    @* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp
+        Egna anpassningar har gjorts i den. *@
                     <div id="myCarousel1" class="carousel slide" data-interval="false">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -127,8 +129,7 @@
     </div>
 
  
-@*</div>
-</div>*@
+@* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp*@
 
 <script>
     $(document).ready(function () {
