--- a/design/design/Views/Admin/studentboende.cshtml
+++ b/design/design/Views/Admin/studentboende.cshtml
@@ -21,6 +21,8 @@
           
             <div class=" col-md-10 col-sm-12 col-xs-12 col-lg-8">
                 <h3>Bilder från studenter</h3>
+                @* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp
+        Egna anpassningar har gjorts i den. *@
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -147,7 +149,8 @@
             </div>
         </div>
 
-
+@* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp
+    Egna anpassningar har gjorts i den. *@
 <script>
     $(document).ready(function () {
         // Activate Carousel
