--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -21,6 +21,8 @@
 
             <div class=" col-md-10 col-sm-12 col-xs-12 col-lg-8">
                 <h3>Våra studentboenden</h3>
+                @* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp
+        Egna anpassningar har gjorts i den. *@
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -629,7 +631,7 @@
             </div>
         </div>
 
-
+    @* Carousel hämtad från: https: //www.w3schools.com/bootstrap/bootstrap_ref_js_carousel.asp *@
 <script>
     $(document).ready(function () {
         // Activate Carousel
